# course_work3

./: pyproject.toml  readme.md
functions/: main.py  utils.py
tests/: test_file.json  test_utils.py
