[tool.poetry]
name = "coursework3"
version = "0.1.0"
description = "data filter and viewing tool"
authors = ["Dmitry Minin <d.n.minin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
